fix: only show mobile logo on mobile screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -444,11 +444,6 @@ pre code {
     display: none !important;
   }
 
-  .site-logo--mobile-light,
-  .site-logo--mobile-dark {
-    display: block !important;
-  }
-
   .hamburger {
     display: flex;
   }
